Corrigiendo algunos fallos pendientes

--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1277,140 +1277,140 @@
        "      <td>1</td>\n",
        "      <td>Mandarin (entire branch)</td>\n",
        "      <td>935 (955)</td>\n",
-       "      <td>935 (955)</td>\n",
+       "      <td>14.1%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Spanish</td>\n",
        "      <td>390 (405)</td>\n",
-       "      <td>390 (405)</td>\n",
+       "      <td>5.85%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>English</td>\n",
        "      <td>365 (360)</td>\n",
-       "      <td>365 (360)</td>\n",
+       "      <td>5.52%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>Hindi</td>\n",
        "      <td>295 (310)</td>\n",
-       "      <td>295 (310)</td>\n",
+       "      <td>4.46%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>Arabic</td>\n",
        "      <td>280 (295)</td>\n",
-       "      <td>280 (295)</td>\n",
+       "      <td>4.23%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6</td>\n",
        "      <td>Portuguese</td>\n",
        "      <td>205 (215)</td>\n",
-       "      <td>205 (215)</td>\n",
+       "      <td>3.08%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>7</td>\n",
        "      <td>Bengali (Bangla)</td>\n",
        "      <td>200 (205)</td>\n",
-       "      <td>200 (205)</td>\n",
+       "      <td>3.05%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>8</td>\n",
        "      <td>Russian</td>\n",
        "      <td>160 (155)</td>\n",
-       "      <td>160 (155)</td>\n",
+       "      <td>2.42%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>9</td>\n",
        "      <td>Japanese</td>\n",
        "      <td>125 (125)</td>\n",
-       "      <td>125 (125)</td>\n",
+       "      <td>1.92%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>10</td>\n",
        "      <td>Punjabi</td>\n",
        "      <td>95 (100)</td>\n",
-       "      <td>95 (100)</td>\n",
+       "      <td>1.44%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>11</td>\n",
        "      <td>German</td>\n",
        "      <td>92 (95)</td>\n",
-       "      <td>92 (95)</td>\n",
+       "      <td>1.39%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>12</td>\n",
        "      <td>Javanese</td>\n",
        "      <td>82</td>\n",
-       "      <td>82</td>\n",
+       "      <td>1.25%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>13</td>\n",
        "      <td>Wu (inc. Shanghainese)</td>\n",
        "      <td>80</td>\n",
-       "      <td>80</td>\n",
+       "      <td>1.20%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>14</td>\n",
        "      <td>Malay (inc. Indonesian and Malaysian)</td>\n",
        "      <td>77</td>\n",
-       "      <td>77</td>\n",
+       "      <td>1.16%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>15</td>\n",
        "      <td>Telugu</td>\n",
        "      <td>76</td>\n",
-       "      <td>76</td>\n",
+       "      <td>1.15%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>16</td>\n",
        "      <td>Vietnamese</td>\n",
        "      <td>76</td>\n",
-       "      <td>76</td>\n",
+       "      <td>1.14%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>17</td>\n",
        "      <td>Korean</td>\n",
        "      <td>76</td>\n",
-       "      <td>76</td>\n",
+       "      <td>1.14%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>18</td>\n",
        "      <td>French</td>\n",
        "      <td>75</td>\n",
-       "      <td>75</td>\n",
+       "      <td>1.12%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>19</td>\n",
        "      <td>Marathi</td>\n",
        "      <td>73</td>\n",
-       "      <td>73</td>\n",
+       "      <td>1.10%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>20</td>\n",
        "      <td>Tamil</td>\n",
        "      <td>70</td>\n",
-       "      <td>70</td>\n",
+       "      <td>1.06%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1440,26 +1440,26 @@
        "19   20                                  Tamil   \n",
        "\n",
        "   Speakers (in millions) 2007 (2010) Percentage  \n",
-       "0                           935 (955)  935 (955)  \n",
-       "1                           390 (405)  390 (405)  \n",
-       "2                           365 (360)  365 (360)  \n",
-       "3                           295 (310)  295 (310)  \n",
-       "4                           280 (295)  280 (295)  \n",
-       "5                           205 (215)  205 (215)  \n",
-       "6                           200 (205)  200 (205)  \n",
-       "7                           160 (155)  160 (155)  \n",
-       "8                           125 (125)  125 (125)  \n",
-       "9                            95 (100)   95 (100)  \n",
-       "10                            92 (95)    92 (95)  \n",
-       "11                                 82         82  \n",
-       "12                                 80         80  \n",
-       "13                                 77         77  \n",
-       "14                                 76         76  \n",
-       "15                                 76         76  \n",
-       "16                                 76         76  \n",
-       "17                                 75         75  \n",
-       "18                                 73         73  \n",
-       "19                                 70         70  "
+       "0                           935 (955)      14.1%  \n",
+       "1                           390 (405)      5.85%  \n",
+       "2                           365 (360)      5.52%  \n",
+       "3                           295 (310)      4.46%  \n",
+       "4                           280 (295)      4.23%  \n",
+       "5                           205 (215)      3.08%  \n",
+       "6                           200 (205)      3.05%  \n",
+       "7                           160 (155)      2.42%  \n",
+       "8                           125 (125)      1.92%  \n",
+       "9                            95 (100)      1.44%  \n",
+       "10                            92 (95)      1.39%  \n",
+       "11                                 82      1.25%  \n",
+       "12                                 80      1.20%  \n",
+       "13                                 77      1.16%  \n",
+       "14                                 76      1.15%  \n",
+       "15                                 76      1.14%  \n",
+       "16                                 76      1.14%  \n",
+       "17                                 75      1.12%  \n",
+       "18                                 73      1.10%  \n",
+       "19                                 70      1.06%  "
       ]
      },
      "metadata": {},
@@ -1479,7 +1479,7 @@
     "    \"Languages\" : [list_language[e].select(\"td:nth-child(2)\")[0].text if e != 3 else \\\n",
     "                   list_language[e].select(\"td:nth-child(2)\")[0].text[:-3] for e in range(20)],\n",
     "    \"Speakers (in millions) 2007 (2010)\" : [list_language[e].select(\"td:nth-child(3)\")[0].text for e in range(20)],\n",
-    "    \"Percentage\" : [list_language[e].select(\"td:nth-child(3)\")[0].text for e in range(20)]\n",
+    "    \"Percentage\" : [list_language[e].select(\"td:nth-child(4)\")[0].text.strip() for e in range(20)]\n",
     "}\n",
     "\n",
     "df_lan = pd.DataFrame(d)\n",
