Corrigiendo algunos fallos pendientes

--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1788,8 +1788,6 @@
    "source": [
     "#your code\n",
     "\n",
-    "import urllib.request\n",
-    "\n",
     "data16 = rq.get(url)\n",
     "\n",
     "list_films = BeautifulSoup(data16.text, 'html.parser')\n",
@@ -1806,8 +1804,8 @@
     "film_description=[]\n",
     "\n",
     "for e in film_href:\n",
-    "    html = urllib.request.urlopen(e).read()\n",
-    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    html = rq.get(e)\n",
+    "    soup = BeautifulSoup(html.text, 'html.parser')\n",
     "    film_description.append(soup.select('div.summary_text')[0].text.strip()) \n",
     "\n",
     "dfilms2 = {\n",
