--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -1134,7 +1134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27'] ['3:32:43.6', '2:57:44.0', '2:47:17.7', '2:37:20.9', '2:11:30.0', '1:34:00.5', '1:14:30.0', '0:58:29.2', '0:50:46.8', '0:45:19.3', '0:41:30.0', '0:38:31.0', '0:24:33.1', '0:16:09.0', '9:55:27.9', '9:49:53.0', '9:49:50.0', '9:35:06.0', '9:29:45.4', '9:01:30.0', '8:44:12.2', '8:28:06.0', '8:19:28.0', '8:15:43.9', '8:00:42.0', '7:50:29.1', '7:42:58.7', '7:38:25.0', '7:20:30.0', '6:31:44.4', '6:14:09.0', '6:12:06.5', '5:51:31.8', '5:51:20.1', '5:44:27.5', '5:39:30.1', '5:22:10.0', '4:49:19.0', '4:46:54.6', '4:43:00.6', '4:14:03.4', '4:05:16.0', '3:36:30.0', '2:48:35.9', '2:47:27.4', '2:45:41.0', '2:36:35.0', '1:57:30.0', '1:45:34.0', '1:34:35.0'] ['OFFSHORE CENTRAL CALIFORNIA', 'MINAHASA, SULAWESI, INDONESIA', 'CANARY ISLANDS, SPAIN REGION', 'AUSTRIA', 'PANAMA-COSTA RICA BORDER REGION', 'SOUTHERN CALIFORNIA', 'PANAMA-COSTA RICA BORDER REGION', 'TONGA', 'GREATER LOS ANGELES AREA, CALIF.', 'PAPUA, INDONESIA', 'PANAMA-COSTA RICA BORDER REGION', 'NEW SOUTH WALES, AUSTRALIA', 'HALMAHERA, INDONESIA', 'SULAWESI, INDONESIA', 'CENTRAL ALASKA', 'COQUIMBO, CHILE', 'NIAS REGION, INDONESIA', 'SULAWESI, INDONESIA', 'NEAR EAST COAST OF HONSHU, JAPAN', 'PANAMA-COSTA RICA BORDER REGION', 'WESTERN TEXAS', 'PAPUA, INDONESIA', 'OFFSHORE VALPARAISO, CHILE', 'DOMINICAN REPUBLIC REGION', 'PAPUA, INDONESIA', 'ISLAND OF HAWAII, HAWAII', 'SICILY, ITALY', 'POLAND', 'PANAMA-COSTA RICA BORDER REGION', 'NORTHERN CALIFORNIA', 'PAPUA, INDONESIA', 'OFF COAST OF JALISCO, MEXICO', 'ROMANIA', 'SOUTHERN ITALY', 'PAPUA, INDONESIA', 'LOYALTY ISLANDS', 'ADRIATIC SEA', 'DOMINICAN REPUBLIC', 'CENTRAL TURKEY', 'SOUTHERN ITALY', 'FIJI REGION', 'PAPUA, INDONESIA', 'PANAMA-COSTA RICA BORDER REGION', 'PAPUA, INDONESIA', 'NEAR THE COAST OF WESTERN TURKEY', 'PAPUA, INDONESIA', 'COQUIMBO, CHILE', 'PANAMA-COSTA RICA BORDER REGION', 'TARAPACA, CHILE', 'CERAM SEA, INDONESIA']\n",
+      "['19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-28', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27', '19-06-27'] ['7:55:44.6', '7:48:25.9', '7:40:31.0', '7:39:29.8', '7:04:21.7', '6:56:30.0', '6:49:17.8', '6:48:48.2', '6:37:40.9', '6:16:55.0', '5:42:39.8', '5:38:30.0', '5:29:52.3', '5:23:59.3', '5:16:12.1', '4:30:34.0', '4:27:30.0', '4:20:11.4', '4:20:02.0', '3:58:30.0', '3:41:30.0', '3:41:22.9', '3:40:05.0', '2:56:49.2', '2:55:28.5', '2:24:30.0', '2:07:43.6', '1:50:30.0', '1:35:51.8', '1:03:58.0', '0:52:16.0', '0:50:24.2', '0:45:47.0', '0:39:46.5', '0:37:57.0', '0:28:45.7', '0:18:57.0', '0:16:30.0', '3:37:58.9', '3:32:43.6', '2:57:44.0', '2:47:17.7', '2:37:20.9', '2:12:54.0', '2:11:30.0', '1:47:54.3', '1:34:00.5', '1:14:30.0', '1:06:59.0', '0:58:24.3'] ['ISLAND OF HAWAII, HAWAII', 'ISLAND OF HAWAII, HAWAII', 'ISLAND OF HAWAII, HAWAII', 'GREECE', 'MINDANAO, PHILIPPINES', 'PANAMA-COSTA RICA BORDER REGION', 'ISLAND OF HAWAII, HAWAII', 'SOUTH OF PANAMA', 'CENTRAL TURKEY', 'QUEENSLAND, AUSTRALIA', 'TURKEY-SYRIA-IRAQ BORDER REGION', 'PANAMA-COSTA RICA BORDER REGION', 'JUJUY, ARGENTINA', 'HAWAII REGION, HAWAII', 'HINDU KUSH REGION, AFGHANISTAN', 'IZU ISLANDS, JAPAN REGION', 'PANAMA-COSTA RICA BORDER REGION', 'WESTERN TEXAS', 'SULAWESI, INDONESIA', 'PANAMA-COSTA RICA BORDER REGION', 'PANAMA-COSTA RICA BORDER REGION', 'SICILY, ITALY', 'OFFSHORE ARAUCANIA, CHILE', 'CRETE, GREECE', 'NORTHERN CALIFORNIA', 'PANAMA-COSTA RICA BORDER REGION', 'OFFSHORE GUATEMALA', 'PANAMA-COSTA RICA BORDER REGION', 'NORTHERN CALIFORNIA', 'PAPUA, INDONESIA', 'PAPUA, INDONESIA', 'WESTERN TURKEY', 'PAPUA, INDONESIA', 'SOUTHERN ALASKA', 'OAXACA, MEXICO', 'HALMAHERA, INDONESIA', 'OAXACA, MEXICO', 'PANAMA-COSTA RICA BORDER REGION', 'SOUTHERN PERU', 'OFFSHORE CENTRAL CALIFORNIA', 'MINAHASA, SULAWESI, INDONESIA', 'CANARY ISLANDS, SPAIN REGION', 'AUSTRIA', 'DOMINICAN REPUBLIC REGION', 'PANAMA-COSTA RICA BORDER REGION', 'PUERTO RICO REGION', 'SOUTHERN CALIFORNIA', 'PANAMA-COSTA RICA BORDER REGION', 'OFFSHORE GUERRERO, MEXICO', 'TONGA']\n",
       "50\n",
       "50\n",
       "50\n"
@@ -1167,8 +1167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['35.81 N', '0.16 N', '27.63 N', '47.18 N', '8.33 N', '35.20 N', '8.38 N', '20.79 N', '34.03 N', '2.69 N', '8.35 N', '31.84 N', '1.42 N', '0.20 N', '62.28 N', '30.77 N', '1.40 N', '0.03 N', '40.25 N', '8.35 N', '29.44 N', '2.50 N', '32.38 N', '17.44 N', '2.49 N', '19.18 N', '38.34 N', '50.26 N', '8.31 N', '39.34 N', '2.42 N', '18.06 N', '45.68 N', '39.88 N', '2.71 N', '21.83 N', '43.75 N', '19.12 N', '38.21 N', '40.71 N', '20.74 N', '2.31 N', '8.37 N', '2.72 N', '39.57 N', '2.55 N', '29.65 N', '8.37 N', '18.45 N', '2.97 N']\n",
-      "['121.38W', '124.95W', '18.01W', '10.42W', '82.80W', '118.23W', '82.87W', '174.15W', '117.57W', '138.49W', '82.79W', '150.90W', '127.41W', '123.93W', '151.20W', '71.38W', '97.95W', '123.21W', '142.30W', '82.79W', '104.05W', '138.55W', '71.80W', '68.45W', '138.45W', '155.44W', '14.73W', '18.71W', '82.91W', '123.31W', '138.62W', '105.66W', '26.78W', '15.38W', '138.48W', '168.76W', '15.39W', '70.47W', '36.29W', '16.56W', '178.02W', '138.88W', '82.85W', '138.36W', '26.08W', '138.61W', '71.28W', '82.84W', '70.10W', '128.57W']\n",
+      "['19.41 N', '19.41 N', '19.41 N', '39.46 N', '8.26 N', '8.35 N', '19.22 N', '4.03 N', '37.27 N', '19.74 N', '37.51 N', '8.33 N', '22.43 N', '19.38 N', '36.51 N', '29.97 N', '8.34 N', '31.63 N', '1.25 N', '8.34 N', '8.34 N', '38.92 N', '38.94 N', '35.63 N', '38.78 N', '8.32 N', '13.66 N', '8.35 N', '38.82 N', '2.53 N', '2.81 N', '38.68 N', '2.47 N', '61.96 N', '15.90 N', '1.81 N', '17.17 N', '8.37 N', '17.58 N', '35.81 N', '0.16 N', '27.63 N', '47.18 N', '19.09 N', '8.33 N', '19.49 N', '35.20 N', '8.38 N', '16.11 N', '20.73 N']\n",
+      "['155.28W', '155.29W', '155.28W', '20.77W', '126.04W', '82.84W', '155.40W', '78.63W', '36.97W', '148.88W', '42.74W', '82.80W', '65.98W', '154.95W', '70.29W', '142.92W', '82.88W', '104.28W', '120.32W', '82.81W', '82.82W', '15.51W', '73.61W', '26.03W', '122.75W', '82.81W', '91.82W', '82.85W', '122.81W', '138.49W', '138.60W', '27.61W', '138.49W', '150.93W', '96.57W', '127.40W', '94.42W', '82.83W', '69.91W', '121.38W', '124.95W', '18.01W', '10.42W', '69.30W', '82.80W', '65.45W', '118.23W', '82.87W', '98.72W', '173.99W']\n",
       "50\n",
       "50\n"
      ]
@@ -1227,55 +1227,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>19-06-27</td>\n",
-       "      <td>3:32:43.6</td>\n",
-       "      <td>35.81 N</td>\n",
-       "      <td>121.38W</td>\n",
-       "      <td>OFFSHORE CENTRAL CALIFORNIA</td>\n",
+       "      <td>19-06-28</td>\n",
+       "      <td>7:55:44.6</td>\n",
+       "      <td>19.41 N</td>\n",
+       "      <td>155.28W</td>\n",
+       "      <td>ISLAND OF HAWAII, HAWAII</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>19-06-27</td>\n",
-       "      <td>2:57:44.0</td>\n",
-       "      <td>0.16 N</td>\n",
-       "      <td>124.95W</td>\n",
-       "      <td>MINAHASA, SULAWESI, INDONESIA</td>\n",
+       "      <td>19-06-28</td>\n",
+       "      <td>7:48:25.9</td>\n",
+       "      <td>19.41 N</td>\n",
+       "      <td>155.29W</td>\n",
+       "      <td>ISLAND OF HAWAII, HAWAII</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>19-06-27</td>\n",
-       "      <td>2:47:17.7</td>\n",
-       "      <td>27.63 N</td>\n",
-       "      <td>18.01W</td>\n",
-       "      <td>CANARY ISLANDS, SPAIN REGION</td>\n",
+       "      <td>19-06-28</td>\n",
+       "      <td>7:40:31.0</td>\n",
+       "      <td>19.41 N</td>\n",
+       "      <td>155.28W</td>\n",
+       "      <td>ISLAND OF HAWAII, HAWAII</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>19-06-27</td>\n",
-       "      <td>2:37:20.9</td>\n",
-       "      <td>47.18 N</td>\n",
-       "      <td>10.42W</td>\n",
-       "      <td>AUSTRIA</td>\n",
+       "      <td>19-06-28</td>\n",
+       "      <td>7:39:29.8</td>\n",
+       "      <td>39.46 N</td>\n",
+       "      <td>20.77W</td>\n",
+       "      <td>GREECE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>19-06-27</td>\n",
-       "      <td>2:11:30.0</td>\n",
-       "      <td>8.33 N</td>\n",
-       "      <td>82.80W</td>\n",
-       "      <td>PANAMA-COSTA RICA BORDER REGION</td>\n",
+       "      <td>19-06-28</td>\n",
+       "      <td>7:04:21.7</td>\n",
+       "      <td>8.26 N</td>\n",
+       "      <td>126.04W</td>\n",
+       "      <td>MINDANAO, PHILIPPINES</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Date       Time Latitude Longitude                           Region\n",
-       "0  19-06-27  3:32:43.6  35.81 N   121.38W      OFFSHORE CENTRAL CALIFORNIA\n",
-       "1  19-06-27  2:57:44.0   0.16 N   124.95W    MINAHASA, SULAWESI, INDONESIA\n",
-       "2  19-06-27  2:47:17.7  27.63 N    18.01W     CANARY ISLANDS, SPAIN REGION\n",
-       "3  19-06-27  2:37:20.9  47.18 N    10.42W                          AUSTRIA\n",
-       "4  19-06-27  2:11:30.0   8.33 N    82.80W  PANAMA-COSTA RICA BORDER REGION"
+       "       Date       Time Latitude Longitude                    Region\n",
+       "0  19-06-28  7:55:44.6  19.41 N   155.28W  ISLAND OF HAWAII, HAWAII\n",
+       "1  19-06-28  7:48:25.9  19.41 N   155.29W  ISLAND OF HAWAII, HAWAII\n",
+       "2  19-06-28  7:40:31.0  19.41 N   155.28W  ISLAND OF HAWAII, HAWAII\n",
+       "3  19-06-28  7:39:29.8  39.46 N    20.77W                    GREECE\n",
+       "4  19-06-28  7:04:21.7   8.26 N   126.04W     MINDANAO, PHILIPPINES"
       ]
      },
      "execution_count": 16,
@@ -1295,6 +1295,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# otra opción\n",
+    "rows = soup.select('tr.normal')\n",
+    "\n",
+    "def processRow(row):\n",
+    "    data = row.select('td')\n",
+    "    #display(data)\n",
+    "    return {\n",
+    "    \"datetime\":str.strip(data[3].select('a')[0].text),\n",
+    "    \"lat\": float(data[4].text),\n",
+    "    \"lng\": float(data[6].text),\n",
+    "    \"region\": str.strip(data[-2].text)\n",
+    "    } \n",
+    "    \n",
+    "#processRow(rows[0])\n",
+    "datalist = list(map(processRow, rows))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1309,16 +1332,74 @@
    "source": [
     "# This is the url you will scrape in this exercise\n",
     "# Next 25 hackathon\n",
-    "url ='https://hackevents.co/hackathons'"
+    "url ='https://hackevents.co/hackathons'\n",
+    "res = requests.get(url)\n",
+    "soup = BeautifulSoup(res.text,'html.parser')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'OSNA HACK 2019'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hackathon | Draper University'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hack-ADA-thon – Inspired by BHS Corrugated'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Code Geist Hackathon by SefrWahed'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The Code Factor'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'TECHFEST MUNICH'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#your code"
+    "for e in soup.select('h5'):\n",
+    "    display(e.get_text())"
    ]
   },
   {
@@ -1338,22 +1419,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is the url you will scrape in this exercise \n",
     "# You will need to add the account credentials to this url\n",
-    "url = 'https://twitter.com/'"
+    "url = 'https://twitter.com/laeticaz'\n",
+    "res = requests.get(url)\n",
+    "soup = BeautifulSoup(res.text,'html.parser')\n",
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 Tweets\n",
+      "141 Siguiendo\n",
+      "22 Seguidores\n",
+      "6 Me gusta\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "soup = BeautifulSoup(res.text,'html.parser')\n",
+    "for i in soup.select('a.ProfileNav-stat--link'):\n",
+    "    print(i.get('title'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5 Tweets'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup = BeautifulSoup(res.text,'html.parser')\n",
+    "a = []\n",
+    "for i in soup.select('a.ProfileNav-stat--link'):\n",
+    "    title = i.get('title')\n",
+    "    a.append(title)\n",
+    "a[0]"
    ]
   },
   {
@@ -1373,22 +1507,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is the url you will scrape in this exercise \n",
     "# You will need to add the account credentials to this url\n",
-    "url = 'https://twitter.com/'"
+    "account = 'laeticaz'\n",
+    "url = 'https://twitter.com/{}'.format(account)\n",
+    "res = requests.get(url)\n",
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'22 Seguidores'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "soup = BeautifulSoup(res.text,'html.parser')\n",
+    "a = []\n",
+    "for i in soup.select('a.ProfileNav-stat--link'):\n",
+    "    title = i.get('title')\n",
+    "    a.append(title)\n",
+    "a[2]"
    ]
   },
   {
