--- a/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
+++ b/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
@@ -34,12 +34,11 @@
    "source": [
     "# import libraries here\n",
     "import numpy as np\n",
-    "'''\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline\n",
-    "'''"
+    "%matplotlib inline"
    ]
   },
   {
@@ -79,7 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here-1st way (call `subplots` twice using the `index` parameter)\n"
+    "# your code here-1st way (call `subplots` twice using the `index` parameter)\n",
+    "#flksdf\n",
+    "\n"
    ]
   },
   {
@@ -156,12 +157,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "Scatter Plot\n",
     "\n",
     "Please provide a scatter plot between \"Combined MPG\" as X variable and \n",
     "\"Highway MPG\" as Y variable"
-
    ]
   },
   {
@@ -184,11 +183,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "Box Whisker Plot\n",
     "\n",
     "Please provide a box plot of the variable \"CO2 Emission Grams/mile\""
-
    ]
   },
   {
@@ -211,16 +208,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "Histogram\n",
     "\n",
     "Please provide a histogram of the Fuel Barrels/Year"
-
    ]
   },
   {
    "cell_type": "code",
-
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,16 +233,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "Bar Chart\n",
     "\n",
     "Please provide a bar chart of the Fuel Type on the X axis and \"City MPG\" on the Y axis"
-
    ]
   },
   {
    "cell_type": "code",
-
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
