--- a/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
+++ b/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
@@ -30,16 +30,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
    "source": [
     "# import libraries here\n",
     "import numpy as np\n",
     "'''\n",
-    "import pandas as pd\n",
+    "import pandas as pdd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
-    "'''"
+    "'''\n",
+    "print ('a')"
    ]
   },
   {
@@ -156,12 +165,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "Scatter Plot\n",
     "\n",
     "Please provide a scatter plot between \"Combined MPG\" as X variable and \n",
     "\"Highway MPG\" as Y variable"
-
    ]
   },
   {
@@ -184,11 +191,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "Box Whisker Plot\n",
     "\n",
     "Please provide a box plot of the variable \"CO2 Emission Grams/mile\""
-
    ]
   },
   {
@@ -211,16 +216,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "Histogram\n",
     "\n",
     "Please provide a histogram of the Fuel Barrels/Year"
-
    ]
   },
   {
    "cell_type": "code",
-
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,16 +241,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "Bar Chart\n",
     "\n",
     "Please provide a bar chart of the Fuel Type on the X axis and \"City MPG\" on the Y axis"
-
    ]
   },
   {
    "cell_type": "code",
-
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
