--- a/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
+++ b/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
@@ -596,7 +596,9 @@
    "source": [
     "\n",
     "plt.figure(figsize=(10,6))\n",
-    "plt.bar(vehicles[\"Fuel Type\"].head(1000),vehicles[\"City MPG\"].head(1000))\n"
+    "plt.bar(vehicles[\"Fuel Type\"].head(1000),vehicles[\"City MPG\"].head(1000))\n",
+    "\n",
+    "\n"
    ]
   },
   {
