almost in the middle of C2

--- a/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
+++ b/module-2/lab-matplotlib-seaborn/your-code/challenge-1.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -610,6 +610,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
+    "\n",
+    "from scipy.stats import gaussian_kde\n",
+    "\n",
     "\n",
     "with plt.style.context(('seaborn')):\n",
     "\n",
@@ -639,7 +642,6 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "\n",
     "with plt.style.context(('seaborn')):\n",
     "\n",
     "    plt.bar(vehicles['Fuel Type'], vehicles['City MPG'])\n",
