--- a/module-2/lab-matplotlib-seaborn/your-code/challenge-3.ipynb
+++ b/module-2/lab-matplotlib-seaborn/your-code/challenge-3.ipynb
@@ -15,12 +15,11 @@
    "source": [
     "# import libraries here\n",
     "import pandas as pd\n",
-    "'''\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline\n",
-    "'''"
+    "%matplotlib inline"
    ]
   },
   {
@@ -32,12 +31,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PassengerId</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Survived</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pclass</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <td>male</td>\n",
+       "      <td>female</td>\n",
+       "      <td>female</td>\n",
+       "      <td>female</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>22</td>\n",
+       "      <td>38</td>\n",
+       "      <td>26</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SibSp</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Parch</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ticket</th>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>373450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fare</th>\n",
+       "      <td>7.25</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>7.925</td>\n",
+       "      <td>53.1</td>\n",
+       "      <td>8.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabin</th>\n",
+       "      <td>U0</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>U0</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>U0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Embarked</th>\n",
+       "      <td>S</td>\n",
+       "      <td>C</td>\n",
+       "      <td>S</td>\n",
+       "      <td>S</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   0  \\\n",
+       "PassengerId                        1   \n",
+       "Survived                           0   \n",
+       "Pclass                             3   \n",
+       "Name         Braund, Mr. Owen Harris   \n",
+       "Gender                          male   \n",
+       "Age                               22   \n",
+       "SibSp                              1   \n",
+       "Parch                              0   \n",
+       "Ticket                     A/5 21171   \n",
+       "Fare                            7.25   \n",
+       "Cabin                             U0   \n",
+       "Embarked                           S   \n",
+       "\n",
+       "                                                             1  \\\n",
+       "PassengerId                                                  2   \n",
+       "Survived                                                     1   \n",
+       "Pclass                                                       1   \n",
+       "Name         Cumings, Mrs. John Bradley (Florence Briggs Th...   \n",
+       "Gender                                                  female   \n",
+       "Age                                                         38   \n",
+       "SibSp                                                        1   \n",
+       "Parch                                                        0   \n",
+       "Ticket                                                PC 17599   \n",
+       "Fare                                                   71.2833   \n",
+       "Cabin                                                      C85   \n",
+       "Embarked                                                     C   \n",
+       "\n",
+       "                                  2  \\\n",
+       "PassengerId                       3   \n",
+       "Survived                          1   \n",
+       "Pclass                            3   \n",
+       "Name         Heikkinen, Miss. Laina   \n",
+       "Gender                       female   \n",
+       "Age                              26   \n",
+       "SibSp                             0   \n",
+       "Parch                             0   \n",
+       "Ticket             STON/O2. 3101282   \n",
+       "Fare                          7.925   \n",
+       "Cabin                            U0   \n",
+       "Embarked                          S   \n",
+       "\n",
+       "                                                        3  \\\n",
+       "PassengerId                                             4   \n",
+       "Survived                                                1   \n",
+       "Pclass                                                  1   \n",
+       "Name         Futrelle, Mrs. Jacques Heath (Lily May Peel)   \n",
+       "Gender                                             female   \n",
+       "Age                                                    35   \n",
+       "SibSp                                                   1   \n",
+       "Parch                                                   0   \n",
+       "Ticket                                             113803   \n",
+       "Fare                                                 53.1   \n",
+       "Cabin                                                C123   \n",
+       "Embarked                                                S   \n",
+       "\n",
+       "                                    4  \n",
+       "PassengerId                         5  \n",
+       "Survived                            0  \n",
+       "Pclass                              3  \n",
+       "Name         Allen, Mr. William Henry  \n",
+       "Gender                           male  \n",
+       "Age                                35  \n",
+       "SibSp                               0  \n",
+       "Parch                               0  \n",
+       "Ticket                         373450  \n",
+       "Fare                             8.05  \n",
+       "Cabin                              U0  \n",
+       "Embarked                            S  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "titanic = pd.read_csv('./titanic.csv',low_memory=False)\n",
-    "titanic.head()"
+    "titanic.head().T"
    ]
   },
   {
@@ -49,11 +254,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      int64\n",
+       "Survived       float64\n",
+       "Pclass           int64\n",
+       "Name            object\n",
+       "Gender          object\n",
+       "Age            float64\n",
+       "SibSp            int64\n",
+       "Parch            int64\n",
+       "Ticket          object\n",
+       "Fare           float64\n",
+       "Cabin           object\n",
+       "Embarked        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here\n"
+    "#your code here\n",
+    "titanic.dtypes"
    ]
   },
   {
@@ -386,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
