--- a/module-2/lab-intro-recommender-systems/your-code/main.ipynb
+++ b/module-2/lab-intro-recommender-systems/your-code/main.ipynb
@@ -1652,12 +1652,12 @@
    ],
    "source": [
     "d_n2={\n",
-    "    \"CustomerID\":ids,\n",
-    "    \"Product_1\": prod1,\n",
-    "    \"Product_2\": prod2,\n",
-    "    \"Product_3\": prod3,\n",
-    "    \"Product_4\": prod4,\n",
-    "    \"Product_5\": prod5,\n",
+    "    \"CustomerID\":ids2,\n",
+    "    \"Product_1\": prod1_2,\n",
+    "    \"Product_2\": prod2_2,\n",
+    "    \"Product_3\": prod3_2,\n",
+    "    \"Product_4\": prod4_2,\n",
+    "    \"Product_5\": prod5_2,\n",
     "    \n",
     "}\n",
     "df_fin2=pd.DataFrame(data=d_n2)\n",
