--- a/module-2/lab-intro-recommender-systems/your-code/main.ipynb
+++ b/module-2/lab-intro-recommender-systems/your-code/main.ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -718,12 +718,14 @@
        "Name: 412, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# He elegido el CustomerID 412\n",
+    "\n",
     "similarities = distances[412].sort_values(ascending=False)[1:]\n",
     "similarities.head()\n"
    ]
@@ -831,11 +833,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductName</th>\n",
+       "      <th>Quantity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sauce - Gravy, Au Jus, Mix</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cheese - Cambozola</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Veal - Inside, Choice</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Olive - Spread Tapenade</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pepper - Black, Whole</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  ProductName  Quantity\n",
+       "0  Sauce - Gravy, Au Jus, Mix         3\n",
+       "1          Cheese - Cambozola         3\n",
+       "2       Veal - Inside, Choice         3\n",
+       "3     Olive - Spread Tapenade         3\n",
+       "4       Pepper - Black, Whole         3"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "products = pd.DataFrame(similar.groupby(['ProductName'])['Quantity'].agg('sum').sort_values(ascending=False).reset_index())\n",
+    "products.head()\n"
    ]
   },
   {
@@ -851,10 +923,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductName</th>\n",
+       "      <th>Quantity_x</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Quantity_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sauce - Gravy, Au Jus, Mix</td>\n",
+       "      <td>3</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>Cheese - Cambozola</td>\n",
+       "      <td>3</td>\n",
+       "      <td>464</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>Veal - Inside, Choice</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>Olive - Spread Tapenade</td>\n",
+       "      <td>3</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>537</th>\n",
+       "      <td>Pepper - Black, Whole</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    ProductName  Quantity_x  CustomerID  Quantity_y\n",
+       "0    Sauce - Gravy, Au Jus, Mix           3         200           1\n",
+       "142          Cheese - Cambozola           3         464           1\n",
+       "255       Veal - Inside, Choice           3          33           2\n",
+       "393     Olive - Spread Tapenade           3         200           1\n",
+       "537       Pepper - Black, Whole           3          33           1"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_products = products.merge(total, on='ProductName')\n",
+    "customer = total_products.loc[total_products['CustomerID'] != 412]\n",
+    "not_purchased = customer.groupby(['ProductName'])\n",
+    "not_purchased.head(1).head()"
+   ]
   },
   {
    "cell_type": "markdown",
